--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,38 @@
     <link rel="stylesheet" href="styles/architecture.css">
 
 </head>
+<header>
+    <nav>
+        <h3 class="nav-title">
+            G3-Architects
+        </h3>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Contact</a></li>
+            <li><a href="">Login</a></li>
+        </ul>
+
+    </nav>
+
+    <div class="banner">
+        <div class="banner-content">
+            <h3 class="Banner-title">Brand New Group of Architects</h3>
+            <p class="Banner-paragraph">There are many variations of passages of Lorem Ipsum available, but the majority
+                have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <button class="btn-primary">Explore More</button>
+        </div>
+
+        <img  src="images/banner.png" alt="">
+
+    </div>
+
+</header>
+
 <body>
-    
+    <main></main>
+
+    <footer></footer>
 </body>
+
 </html>
