--- a/index.html
+++ b/index.html
@@ -30,14 +30,36 @@
             <button class="btn-primary">Explore More</button>
         </div>
 
-        <img  src="images/banner.png" alt="">
+        <img src="images/banner.png" alt="">
 
     </div>
 
 </header>
 
 <body>
-    <main></main>
+    <main>
+
+        <section class="team-section">
+            <div class="team-image">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="team-text-container">
+
+                <h1 class="text-feature"> <span class="quick-list">Quick list</span> <span class="Of-our-text">of
+                        Our</span> <span class="feature-txt">Features</span> </h1>
+                <p class="Banner-paragraph">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+
+
+
+    </main>
 
     <footer></footer>
 </body>
